Update styling: make headers visible; add padding; fix forms.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,3 +35,14 @@ a:link {
   background-color: transparent;
   text-decoration: underline;
 }
+
+.ui-shescoding-crud {
+  padding-top: 75px;
+  padding-bottom: 30px;
+  padding-left: 15px;
+}
+
+#notice {
+	font-size: 30px;
+	color: green;
+}
